--- a/examples/profile/index.html
+++ b/examples/profile/index.html
@@ -7,7 +7,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="../formarble.js"></script>
+    <script src="../../formarble.js"></script>
     <script src="schema.js"></script>
     <script src="app.js"></script>
 </head>
