--- a/examples/profile/index.html
+++ b/examples/profile/index.html
@@ -109,7 +109,7 @@
         <div class="col-sm-8">
             <div class="radio" ng-repeat="li in $control.display.options">
                 <label>
-                    <input type="radio" name="{{$control.path}}" ng-model="$control.value" ng-value="li.id"/> {{:: li.title}}
+                    <input type="radio" fm-input="$control" ng-value="li.id"/> {{:: li.title}}
                 </label>
             </div>
         </div>
