--- a/examples/profile/index.html
+++ b/examples/profile/index.html
@@ -39,7 +39,7 @@
     <div>
         <h2>Group: {{::$control.path}}</h2>
 
-        <div ng-repeat="c in ::$subControls | orderBy:'order'" fm-control="c"></div>
+        <div ng-repeat="c in ::$subControls" fm-control="c"></div>
 
     </div>
 </script>
@@ -47,7 +47,7 @@
     <!-- Nav tabs -->
     <ul class="nav nav-pills">
         <li ng-class="{active: $first}"
-            ng-repeat="c in ::$subControls | orderBy:'order'">
+            ng-repeat="c in ::$subControls">
             <a href="#{{::c.path.split('.').join('-')}}" data-toggle="tab">{{::c.title || c.description || c.path}}</a>
         </li>
     </ul>
@@ -55,7 +55,7 @@
     <div class="tab-content">
         <div class="tab-pane"
              ng-class="{active: $first}"
-             ng-repeat="c in ::$subControls | orderBy:'order'"
+             ng-repeat="c in ::$subControls"
              id="{{::c.path.split('.').join('-')}}"
              fm-control="c"></div>
     </div>
