--- a/examples/profile/index.html
+++ b/examples/profile/index.html
@@ -17,8 +17,9 @@
 
     <div class="row">
         <div class="col-md-6">
-            <form class="form-horizontal"
-                  fm-form fm-schema="schema" ng-model="model"></form>
+            <form class="form-horizontal" fm-form="schema" ng-model="model">
+                <div fm-control="$control"></div>
+            </form>
         </div>
         <div class="col-md-6">
             <input type="range" ng-model="model.image.testRange" step="0.01" min="0" max="1"/><br/>
