--- a/examples/contact-form/index.html
+++ b/examples/contact-form/index.html
@@ -17,16 +17,12 @@
 
     <div class="row" ng-init="resetLabel = 'Reset';">
         <div class="col-md-8">
-            <form class="form-horizontal" novalidate>
-                <div fm-form="schema" fm-theme="bs" ng-model="model">
-                    <div fm-control="$control">
-                        {{'fm-control'}} {{$control.path || 'N/A'}}
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-push-4 col-sm-8">
-                            <button class="btn btn-primary" ng-click="$parent.send()">Send</button>
-                            <button class="btn" ng-click="$parent.reset()" fm-reset>{{$parent.resetLabel || 'N/A'}}</button>
-                        </div>
+            <form name="form" class="form-horizontal" novalidate>
+                <div fm-form="schema" fm-theme="bs" ng-model="model"></div>
+                <div class="form-group">
+                    <div class="col-sm-push-4 col-sm-8">
+                        <button class="btn btn-primary" ng-click="send()" ng-disabled="form.$invalid">Send</button>
+                        <button class="btn" ng-click="reset()" fm-reset ng-disabled="form.$pristine">{{resetLabel || 'N/A'}}</button>
                     </div>
                 </div>
             </form>
@@ -52,12 +48,12 @@
 </script>
 <script id="bs/textarea" type="text/ng-template">
     <div class="form-group" ng-class="{'has-error': $input.$dirty && $input.$invalid}">
-        <label class="control-label col-sm-4" fm-label="$control">
+        <label class="control-label col-sm-4" fm-label>
             {{:: $control.title || $control.path}}
         </label>
 
         <div class="col-sm-8">
-            <textarea class="form-control" fm-input="$control"/>
+            <textarea class="form-control" fm-input/>
 
             <p class="help-block">{{:: $control.description}}</p>
         </div>
@@ -65,12 +61,12 @@
 </script>
 <script id="bs/input" type="text/ng-template">
     <div class="form-group" ng-class="{'has-error': $input.$dirty && $input.$invalid}">
-        <label class="control-label col-sm-4" fm-label="$control">
+        <label class="control-label col-sm-4" fm-label>
             {{:: $control.title || $control.path}}
         </label>
 
         <div class="col-sm-8">
-            <input class="form-control" fm-input="$control"/>
+            <input class="form-control" fm-input/>
 
             <p class="help-block">{{:: $control.description}}</p>
         </div>
@@ -78,14 +74,14 @@
 </script>
 <script id="bs/input:checkbox" type="text/ng-template">
     <div class="form-group">
-        <label class="control-label col-sm-4" fm-label="$control">
+        <label class="control-label col-sm-4" fm-label>
             {{:: $control.title || $control.path}}
         </label>
 
         <div class="col-sm-8">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" fm-input="$control"> {{:: $control.description}}
+                    <input type="checkbox" fm-input> {{:: $control.description}}
                 </label>
             </div>
         </div>
@@ -101,7 +97,7 @@
             <div class="radio" ng-class="{'radio-inline': $control.display.inline}"
                  ng-repeat="li in $control.display.options">
                 <label>
-                    <input type="radio" fm-input="$control" ng-value="li.id"/> {{::
+                    <input type="radio" fm-input ng-value="li.id"/> {{::
                     li.title}}
                 </label>
             </div>
@@ -110,10 +106,10 @@
 </script>
 <script id="bs/select" type="text/ng-template">
     <div class="form-group">
-        <label class="control-label col-sm-4" fm-label="$control">{{:: $control.title || $control.path}}</label>
+        <label class="control-label col-sm-4" fm-label>{{:: $control.title || $control.path}}</label>
 
         <div class="col-sm-8">
-            <select class="form-control" fm-input="$control"></select>
+            <select class="form-control" fm-input></select>
         </div>
     </div>
 </script>
