--- a/examples/contact-form/index.html
+++ b/examples/contact-form/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 </script>
-<script id="bs/input:checkbox" type="text/ng-template">
+<script id="bs/checkbox" type="text/ng-template">
     <div class="form-group">
         <label class="control-label col-sm-4" fm-label>
             {{:: $control.title || $control.path}}
@@ -87,7 +87,7 @@
         </div>
     </div>
 </script>
-<script id="bs/radio-list" type="text/ng-template">
+<script id="bs/radiolist" type="text/ng-template">
     <div class="form-group">
         <label class="control-label col-sm-4">
             {{:: $control.title || $control.path}}
