WP, deep refactor

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -20,9 +20,8 @@
             <div fm-control="$control"></div>
         </form>
     </div>
-    <pre>
-        Model: {{model}}
-    </pre>
+    Model:
+    <pre>{{model | json}}</pre>
 
 </div>
 </body>
