WP: use directives to load controls

--- a/examples/contact-form/index.html
+++ b/examples/contact-form/index.html
@@ -46,6 +46,7 @@
 </body>
 
 <script id="bs/group" type="text/ng-template">
+    <h2>Group: {{$control.$model}}</h2>
     <div ng-repeat="c in ::$subControls" fm-control="c"></div>
 </script>
 <script id="bs/textarea" type="text/ng-template">
