--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -22,6 +22,7 @@
     </div>
 
     <h1>Separate image part</h1>
+
     <div>
         <form class="form-horizontal" fm-form="image" fm-theme="bs" ng-model="model">
             <div fm-control="$control"></div>
@@ -32,29 +33,25 @@
     <pre>{{model | json}}</pre>
 
 
-
-
 </div>
 </body>
 
 <script id="bs/tree" type="text/ng-template">
-    <div fm-tree>
-        <h3 class="text-muted" ng-if="::!$isSubtree">
-            <a href ng-click="$tree.select()">{{::$control.title}}</a></h3>
-        <div class="row">
-            <div class="col-lg-3" ng-if="::!$isSubtree">
-                <ol fm-tree-sidebar="$control"></ol>
+    <h3 class="text-muted" ng-if="::!$isSubtree">
+        <a href ng-click="$tree.select()">{{::$control.title}}</a></h3>
+    <div class="row">
+        <div class="col-lg-3" ng-if="::!$isSubtree">
+            <ol fm-tree-sidebar="$control"></ol>
+        </div>
+        <div ng-class=":: {'col-lg-12': $isSubtree, 'col-lg-9': !$isSubtree}">
+            <div ng-if="!$tree.selected && $subControls.length">
+                <div ng-repeat="c in ::$subControls" fm-control="c"></div>
             </div>
-            <div ng-class=":: {'col-lg-12': $isSubtree, 'col-lg-9': !$isSubtree}">
-                <div ng-if="!$tree.selected && $subControls.length">
-                    <div ng-repeat="c in ::$subControls" fm-control="c"></div>
-                </div>
-                <div ng-if="!$tree.selected && !$subControls.length">
-                    Select option in tree
-                </div>
-                <div ng-if="$tree.selected"t>
-                    <div fm-control="$tree.selected"></div>
-                </div>
+            <div ng-if="!$tree.selected && !$subControls.length">
+                Select option in tree
+            </div>
+            <div ng-if="$tree.selected">
+                <div fm-control="$tree.selected"></div>
             </div>
         </div>
     </div>
@@ -68,6 +65,7 @@
 <script id="bs/group" type="text/ng-template">
     <div>
         <p class="text-muted" ng-style="{'padding-left':$control.level*20}">{{::$control.title}}</p>
+
         <div ng-repeat="c in ::$subControls" fm-control="c"></div>
     </div>
 </script>
@@ -91,7 +89,7 @@
 <script id="bs/input" type="text/ng-template">
     <div class="form-group" ng-class="{'has-error': $input.$invalid}">
         <label class="control-label col-sm-4" fm-label>
-        {{:: $control.title || $control.path}}
+            {{:: $control.title || $control.path}}
         </label>
 
         <div class="col-sm-8">
@@ -110,7 +108,7 @@
 <script id="bs/input/range" type="text/ng-template">
     <div class="form-group" ng-class="{'has-error': $input.$invalid}">
         <label class="control-label col-sm-4" fm-label>
-        {{:: $control.title || $control.path}}
+            {{:: $control.title || $control.path}}
         </label>
 
         <div class="col-sm-8">
@@ -135,8 +133,9 @@
 <script id="bs/checkbox" type="text/ng-template">
     <div class="form-group">
         <label class="control-label col-sm-4" fm-label>
-        {{:: $control.title || $control.path}}
+            {{:: $control.title || $control.path}}
         </label>
+
         <div class="col-sm-8">
             <div class="checkbox">
                 <label>
