--- a/examples/profile/index.html
+++ b/examples/profile/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Formarble example</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
@@ -27,49 +27,49 @@
 </body>
 
 <script id="bs/tree" type="text/ng-template">
-    <div fm-tree>
-        <h3 class="text-muted" ng-if="::!$isSubtree">
-            <a href ng-click="$tree.select()">{{::$control.title}}</a></h3>
-        </h3>
-        <div class="row">
-            <div class="col-lg-3" ng-if="::!$isSubtree">
-                <ol fm-tree-sidebar="$control"></ol>
+    <h3 class="text-muted" ng-if="::!$isSubtree">
+        <a href ng-click="$tree.select()">{{::$control.title}}</a>
+    </h3>
+    <div class="row">
+        <div class="col-lg-3" ng-if="::!$isSubtree">
+            <ol fm-tree-sidebar="$control"></ol>
+        </div>
+        <div ng-class=":: {'col-lg-12': $isSubtree, 'col-lg-9': !$isSubtree}">
+            <div ng-if="!$tree.selected && $subControls.length">
+                <div ng-repeat="c in ::$subControls" fm-control="c"></div>
             </div>
-            <div ng-class=":: {'col-lg-12': $isSubtree, 'col-lg-9': !$isSubtree}">
-                <div ng-if="!$tree.selected && $subControls.length">
-                    <div ng-repeat="c in ::$subControls" fm-control="c"></div>
-                </div>
-                <div ng-if="!$tree.selected && !$subControls.length">
-                    Select option in tree
-                </div>
-                <div ng-if="$tree.selected"t>
-                    <div fm-control="$tree.selected"></div>
-                </div>
+            <div ng-if="!$tree.selected && !$subControls.length">
+                Select option in tree
+            </div>
+            <div ng-if="$tree.selected">
+                <div fm-control="$tree.selected"></div>
             </div>
         </div>
     </div>
 </script>
 <script id="bs/tree/sidebar" type="text/ng-template">
     <li ng-repeat="i in $items">
-        <a href ng-click="$select(i)">{{i.title || i.path}}</a>
-        <ul ng-if="$tree.isGroupOpen(i)" fm-tree-sidebar="i"></ul>
+        <a href ng-click="$select(i)">{{i.title}}</a>
+        <ul ng-if="$tree.isGroupOpen(i) || i.display.open" fm-tree-sidebar="i"></ul>
     </li>
 </script>
 <script id="bs/group" type="text/ng-template">
     <div>
-        <p class="text-muted" ng-style="{'padding-left':$control.level*20}">{{::$control.title}}</p>
+        <p class="text-muted">{{::$control.title}}</p>
+
         <div ng-repeat="c in ::$subControls" fm-control="c"></div>
     </div>
 </script>
+<!--
 <script id="bs/group:tab" type="text/ng-template">
-    <!-- Nav tabs -->
+    &lt;!&ndash; Nav tabs &ndash;&gt;
     <ul class="nav nav-pills">
         <li ng-class="{active: $first}"
             ng-repeat="c in ::$subControls">
             <a href="#{{::c.path.split('.').join('-')}}" data-toggle="tab">{{::c.title || c.description || c.path}}</a>
         </li>
     </ul>
-    <!-- Tab panes -->
+    &lt;!&ndash; Tab panes &ndash;&gt;
     <div class="tab-content">
         <div class="tab-pane"
              ng-class="{active: $first}"
@@ -77,75 +77,81 @@
              id="{{::c.path.split('.').join('-')}}"
              fm-control="c"></div>
     </div>
+</script>-->
+
+<script id="bs/control-label" type="text/ng-template">
+    {{:: $control.title}}
+    <a class="control-help" ng-if="::$control.display.hint" title="{{::$control.display.hint}}">
+        <i class="glyphicon glyphicon-info-sign"></i>
+    </a>
 </script>
 <script id="bs/input" type="text/ng-template">
-    <div class="form-group" ng-class="{'has-error': $input.$invalid}">
-        <label class="control-label col-sm-4" fm-label>
-        {{:: $control.title || $control.path}}
-        </label>
+    <div class="form-group" ng-class="{'has-error': $input.$dirty && $input.$invalid}">
+        <label class="control-label col-sm-4" fm-control-label></label>
 
-        <div class="col-sm-8">
-            <input class="form-control" fm-input/>
+        <div class="col-sm-8 clearfix">
+            <input class="form-control" fm-control-input/>
+
+            <p ng-if="!$empty" class="help-block pull-right">
+                <a href fm-reset><i class="glyphicon glyphicon-ban-circle"></i> Reset to default</a>
+            </p>
 
             <p ng-if="::$control.description" class="help-block">
                 {{:: $control.description}}
-                <a ng-if="::$control.display.hint" title="{{::$control.display.hint}}">
-                    <i class="glyphicon glyphicon-info-sign"></i>
-                </a>
             </p>
-
         </div>
     </div>
 </script>
 <script id="bs/input/range" type="text/ng-template">
     <div class="form-group" ng-class="{'has-error': $input.$invalid}">
-        <label class="control-label col-sm-4" fm-label>
-        {{:: $control.title || $control.path}}
-        </label>
+        <label class="control-label col-sm-4" fm-control-label></label>
 
         <div class="col-sm-8">
             <div class="input-group">
-                <input class="form-control" type="range" fm-input/>
+                <input class="form-control" type="range" fm-control-input/>
                 <span class="input-group-addon" style="min-width: 60px">{{$value || 'N/A'}}</span>
             </div>
 
+            <p ng-if="!$empty" class="help-block pull-right">
+                <a href fm-reset><i class="glyphicon glyphicon-ban-circle"></i> Reset to default</a>
+            </p>
 
             <p ng-if="::$control.description" class="help-block">
                 {{:: $control.description}}
-                <a ng-if="::$control.display.hint" title="{{::$control.display.hint}}">
-                    <i class="glyphicon glyphicon-info-sign"></i>
-                </a>
             </p>
-
-            <small ng-if="$input.$dirty"><a href ng-click="$input.$setPristine()">use default</a></small>
-
         </div>
     </div>
 </script>
 <script id="bs/checkbox" type="text/ng-template">
     <div class="form-group">
-        <label class="control-label col-sm-4" fm-label>
-        {{:: $control.title || $control.path}}
-        </label>
+        <label class="control-label col-sm-4" fm-control-label></label>
+
         <div class="col-sm-8">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" fm-input> {{:: $control.description}}
+                    <input type="checkbox" fm-control-input> {{:: $control.description}}
                 </label>
+
+                <p ng-if="!$empty" class="help-block pull-right">
+                    <a href fm-reset><i class="glyphicon glyphicon-ban-circle"></i> Reset to default</a>
+                </p>
+
             </div>
         </div>
     </div>
 </script>
 <script id="bs/radiolist" type="text/ng-template">
     <div class="form-group">
-        <label class="control-label col-sm-4">
-            {{:: $control.title || $control.path}}
-        </label>
+        <label class="control-label col-sm-4" fm-control-label for=""></label>
 
         <div class="col-sm-8">
+            <p ng-if="!$empty" class="help-block pull-right">
+                <a href fm-reset><i class="glyphicon glyphicon-ban-circle"></i> Reset to default</a>
+            </p>
+
             <div class="radio" ng-repeat="li in $control.display.options">
                 <label>
-                    <input type="radio" fm-input ng-value="li.id"/> {{:: li.title}}
+                    <input type="radio" fm-control-input ng-value="li.id"/> {{:: li.title}}
                 </label>
             </div>
         </div>
@@ -153,10 +159,14 @@
 </script>
 <script id="bs/select" type="text/ng-template">
     <div class="form-group">
-        <label class="control-label col-sm-4" fm-label>{{:: $control.title || $control.path}}</label>
+        <label class="control-label col-sm-4" fm-control-label></label>
 
         <div class="col-sm-8">
-            <select class="form-control" fm-input></select>
+            <select class="form-control" fm-control-input></select>
+
+            <p ng-if="!$empty" class="help-block pull-right">
+                <a href fm-reset><i class="glyphicon glyphicon-ban-circle"></i> Reset to default</a>
+            </p>
         </div>
     </div>
 </script>
